[package]
name = "alduin"
version = "0.0.0"
description = "A Tauri App"
authors = ["Xavier Stouder"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["cli", "updater", "system-tray", "path-all", "fs-all", "window-start-dragging", "window-maximize", "window-hide", "window-close", "window-unminimize", "window-show", "window-unmaximize", "shell-open", "window-minimize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.26"
feed-rs = "1.3.0"
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-sql = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["sqlite"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
include_dir = { version = "0.7.3", features = ["glob"] }
itertools = "0.11.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "time", "sqlite"] }
tokio = { version = "1", features = ["sync"] }
xxhash-rust = { version = "0.8.6", features = ["xxh32"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
